samples/_failures_safe/1761552867_fcc23a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa82e396.c: In function ‘main’:
./samples/SAFE/__tmp_aa82e396.c:192:9: error: expected declaration or statement at end of input
  192 |         if (input == 6) {
      |         ^~
./samples/SAFE/__tmp_aa82e396.c:192:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa82e396.c:192:9: error: expected declaration or statement at end of input
